[gd_scene load_steps=3 format=3 uid="uid://xw6fb74qkjri"]

[ext_resource type="Script" path="res://Scenes/PauseMenu.gd" id="1"]

[sub_resource type="LabelSettings" id="1"]
font_size = 50

[node name="PauseMenu" type="CanvasLayer"]
visible = false
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1150.0
offset_bottom = 648.0
color = Color(0.282353, 0.368627, 0.223529, 0.466667)

[node name="ResumeButton" type="Button" parent="."]
offset_left = 135.0
offset_top = 73.0
offset_right = 431.0
offset_bottom = 121.0
text = "Resume"

[node name="Settings" type="Button" parent="."]
offset_left = 363.0
offset_top = 184.0
offset_right = 659.0
offset_bottom = 232.0
text = "Settings
"

[node name="SettingsMenu" type="CanvasLayer" parent="."]
visible = false

[node name="InfiniteMovement" type="CheckButton" parent="SettingsMenu"]
offset_left = 26.0
offset_top = 119.0
offset_right = 217.0
offset_bottom = 150.0
scale = Vector2(1.5, 1.5)
text = "Infinite Movement"

[node name="Page Title" type="Label" parent="SettingsMenu"]
offset_left = 36.0
offset_top = 17.0
offset_right = 308.0
offset_bottom = 89.0
text = "Dev Cheats"
label_settings = SubResource("1")

[node name="CheckButton" type="CheckButton" parent="SettingsMenu"]
offset_left = 41.0
offset_top = 185.0
offset_right = 221.0
offset_bottom = 209.0
scale = Vector2(1.5, 1.5)
text = "Combat Mode"

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed" flags=18]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed" flags=18]
[connection signal="pressed" from="SettingsMenu/InfiniteMovement" to="." method="_on_infinite_movement_pressed" flags=18]
[connection signal="pressed" from="SettingsMenu/CheckButton" to="." method="_on_check_button_pressed" flags=18]
